2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* README: Add note for avrtest-xmega.
	
	* avrtest.c: Add support for XMEGA.
	* avrtest.h: Ditto.
	* Makefile: Add rules to make avrtest-xmega, avrtest-xmega_log,
	and exit-atxmega128a3.o.

	* dejagnuboards/atxmega128-sim.exp: New file.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: More GNU coding rule fixess.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: Indent according to GNU coding rules.

2011-12-07  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atmega128-sim.exp (no_long_long): Don't set to 1
	so that long long run tests are performed.
	
2011-07-06  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atmega128-sim.exp (keeps_null_pointer_checks):
	Set to 1.

2011-06-09  Georg-Johann Lay  <avr@gjlay.de>

	* README: New file.

2011-06-08  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Rewritten.
	* avrtest.h: New file.
	* avrtest.c: Include "avrtest.h"
	(flag_have_stdin, flag_have_stdout): New variables.
	(pargs_args): Unset them on "-no-stdin" resp. "-no-stdout".
	(data_read_byte_raw): Use flag_have_stdin.
	(data_write_byte_raw): Use flag_have_stdout.
	(usage): Document new command line options -no-stdin and
	-no-stdout.
	* dejagnuboards/exit.c: Reworked using "avrtest.h".
	* dejagnuboards/atmega128-sim.exp: Link against exit-atmega128.o.
	Use -no-stdin for avrtest.

2008-06-26  Tristan Gingold  <gingold@adacore.com>

	* avrtest.c: Add support for multiple architecture.  Add command-line
	option -mmcu=ARCH to select the architecture.  Help updated.
	Add support for avr6 instructions: eijmp, eicall.

2008-06-22  Andy Hutchinson   <hutchinsonandy@aim.com>

	* exit.c (exit): Make no return. (abort): Likewise.
	(putchar): Touch argument to prevent unused warning.

	* atmega128-sim.exp: Remove redundant file missing check. 
	Increase RAM and stack size.
	Set Compat options to restrict compatibility tests and optimize to 
	reduce size. 
	Extend simulation  time limit.
